--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Game Landing</title>
 </head>
+
 <body>
-    
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Main</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Game features</a></li>
+        <li><a href="#">System requirements</a></li>
+        <li><a href="#">Quotes</a></li>
+      </ul>
+    </nav>
+    <h1>
+      Survive at all costs
+    </h1>
+    <h2>
+      Experience new social battle royale game
+    </h2>
+    <button>by now on Steam</button>
+  </header>
+  <main>
+    <article>
+      <h3>
+        What is sos
+      </h3>
+      <h5>
+        Social battle royale game
+      </h5>
+      <p>
+        Each round, you and 15 other contestants compete toescape a deadly island filled with monsters. The trick is: three people can survive. Will you runsolo or form friendships with others to escape?<br> Making the right decisions could be thedifference between life and death.
+      </p>
+    </article>
+    <article>
+      <h1>What’s so special?</h1>
+      <h2>features</h2>
+      <h3>Survive at all costs</h3>
+      <p>You have 30 minutes to find a relic, signal for extraction, and grab
+        one of three spots on the rescue chopper.</p>
+      <h4>Create allies and enemies</h4>
+    </article>
+  </main>
 </body>
 </html>
