--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Game Landing</title>
+  <title>Game landing</title>
 </head>
-
 <body>
   <header>
+    <form action="." method="GET">
+      <label for="lang_dropdown">Language</label>
+      <select name="lang" id="lang_dropdown">
+        <option lang="en" value="en" label="English">
+        <option lang="ru" value="ru" label="русский">
+        <option lang="fr" value="fr" label="Français">
+        <option lang="de" value="de" label="Deutsch">
+      </select>
+      <!-- <button type="submit">Save</button> -->
+    </form>
     <nav>
       <ul>
         <li><a href="#">Main</a></li>
@@ -18,34 +27,86 @@
         <li><a href="#">Quotes</a></li>
       </ul>
     </nav>
-    <h1>
-      Survive at all costs
-    </h1>
-    <h2>
-      Experience new social battle royale game
-    </h2>
-    <button>by now on Steam</button>
+    <h1>Survive at all costs</h1>
+    <h2>Experience new social battle royale game</h2>
+    <button>
+      Buy now on steam $14.99
+    </button>
   </header>
   <main>
-    <article>
-      <h3>
-        What is sos
-      </h3>
-      <h5>
-        Social battle royale game
-      </h5>
-      <p>
-        Each round, you and 15 other contestants compete toescape a deadly island filled with monsters. The trick is: three people can survive. Will you runsolo or form friendships with others to escape?<br> Making the right decisions could be thedifference between life and death.
-      </p>
-    </article>
-    <article>
-      <h1>What’s so special?</h1>
-      <h2>features</h2>
-      <h3>Survive at all costs</h3>
-      <p>You have 30 minutes to find a relic, signal for extraction, and grab
-        one of three spots on the rescue chopper.</p>
-      <h4>Create allies and enemies</h4>
-    </article>
+    <section>
+      <h1>What is sos</h1>
+      <h2>social battle royale game</h2>
+      <p>Each round, you and 15 other contestants compete to
+        escape a deadly island filled with monsters. The trick is: three people can survive. Will you run
+        solo or form friendships with others to escape? 
+        
+        Making the right decisions could be the
+        difference between life and death.</p>
+    </section>
+    <section>
+      <header>
+        <h3>Features</h3>
+        <p>What's so special?</p>
+      </header>
+      <ul>
+        <li>
+          <details>
+            <summary>Survive at all costs</summary>
+            <p>You have 30 minutes to find a relic, signal for extraction, and grab
+              one of three spots on the rescue chopper.</p>
+          </details>
+        </li>
+        <li>
+          <details>
+            <summary>Create allies and enemies</summary>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae, impedit nam, reiciendis commodi itaque cupiditate minima inventore molestiae voluptatum ad, dolor quia ea accusantium nesciunt? Sequi, itaque. Quidem, natus.
+            </p>
+          </details>
+        </li>
+        <li>
+          <details>
+            <summary>Impress your audience</summary>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus nobis, qui modi, ratione ea saepe eum iure officiis iusto mollitia nihil unde odio, possimus quo consectetur praesentium harum nesciunt illum?
+            </p>
+          </details>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <header>
+        <h1>Can My Computer Run this game?</h1>
+        <h2>system requirements</h2>
+      </header>
+      <table>
+        <tr>
+          <th>os: <br>Windows 7 64-bit only
+            (No OSX support at this time)
+          </th>
+          <th>processor: <br>Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8GHZ
+          </th>
+        </tr>
+        <tr>
+          <th>Memory: <br>8 GB RAM
+          </th>
+          <th>storage: <br>8 GB available space</th>
+        </tr>
+        <tr>
+          <th>Graphics: <br>8 GB available space</th>
+        </tr>
+      </table>
+    </section>
+    <section>
+      <button>Read more testemonials</button>
+      <article>
+        <
+      </article>
+      <article></article>
+      <article></article>
+    </section>
   </main>
 </body>
+
 </html>
