added main and footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Game landing</title>
 </head>
 <body>
-  <header>
+  <header class="masthead">
     <form action="." method="GET">
       <label for="lang_dropdown">Language</label>
       <select name="lang" id="lang_dropdown">
@@ -18,15 +18,6 @@
       </select>
       <!-- <button type="submit">Save</button> -->
     </form>
-    <nav>
-      <ul>
-        <li><a href="#">Main</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Game features</a></li>
-        <li><a href="#">System requirements</a></li>
-        <li><a href="#">Quotes</a></li>
-      </ul>
-    </nav>
     <h1>Survive at all costs</h1>
     <h2>Experience new social battle royale game</h2>
     <button>
@@ -101,12 +92,70 @@
     <section>
       <button>Read more testemonials</button>
       <article>
-        <
+        <div>
+          <ul>
+            <li>Evan Lahti</li>
+            <li>PC Gamer</li>
+            <p><q>One of my gaming highlights of the year.</p>
+          </ul>
+          <p>October 18, 2018</p>
       </article>
-      <article></article>
-      <article></article>
+      <article>
+        <div>
+          <ul>
+            <li>Jada Griffin </li>
+            <li>Nerdreactor</li>
+            <p><q>The next big thing in the world of streaming and survival games.</p>
+          </ul>
+          <p>December 21, 2018</p>
+        </div>
+      </article>
+      <article>
+        </div>
+        <ul>
+          <li>Aaron Williams</li>
+          <li>Uproxx</li>
+          <p><q>Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.</p>
+        </ul>
+        <p>December 24, 2018</p>
+      </div>
+      </article>
+    </section>
+    <section>
+      <h1>Want to stay in touch?</h1>
+      <ul>
+        <li>NewsLetter</li>
+        <li>Subscribe</li>
+      </ul>
+      <p>In order to start receiving our news, all you have to do is enter your email address. Everything else will be taken care of by us. We will send you emails containing information about game. We don’t spam.</p>
+      <p>Your email address</p>
+      <input type="email" name="email" id="email">
+      <p>aliciliniavopir@gmail.com</p>
+      <button>Subscribe now</button>
     </section>
   </main>
+  <footer>
+    <nav>
+      <ul>
+        <li><a href="#">Main</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Game features</a></li>
+        <li><a href="#">System requirements</a></li>
+        <li><a href="#">Quotes</a></li>
+      </ul>
+      <ul>
+        <li><a href="https://facebook.com"><span>facebook</span></a></li>
+        <li><a href="https://twitter.com"><span>twitter</span></a></li>
+        <li><a href="https://youTube.com"><span>you-tube</span></a></li>
+        <li><a href="https://messanging.com"><span>messanging</span></a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Privacy policy</a></li>
+        <li><a href="#">Terms of service</a></li>
+        <li><a href="#">Code of conduct</a></li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 
 </html>
