added classes to some elements

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
   </header>
   <main>
     <article>
-      <div class="title-of-games">
-        <h1>What is sos</h1>
+      <div>
+        <h1 class="title-of-games">What is sos</h1>
         <h2 class="big-heading">social battle royale game</h2>
-      <p>Each round, you and 15 other contestants compete to
+      <p class="more-explanation">Each round, you and 15 other contestants compete to
         escape a deadly island filled with monsters. The trick is: three people can survive. Will you run
         solo or form friendships with others to escape?
 
