added classes and elements

--- a/index.html
+++ b/index.html
@@ -108,29 +108,34 @@
         </li>
       </ul>
     </article>
-    <article>
+    <article class="graphics">
       <header>
         <h1>Can My Computer Run this game?</h1>
         <h2>system requirements</h2>
       </header>
-      <table>
-        <tr>
-          <th>os: <br>Windows 7 64-bit only
-            (No OSX support at this time)
-          </th>
-          <th>processor: <br>Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8GHZ
-          </th>
-        </tr>
-        <tr>
-          <th>Memory: <br>8 GB RAM
-          </th>
-          <th>storage: <br>8 GB available space</th>
-        </tr>
-        <tr>
-          <th>Graphics: <br>8 GB available space</th>
-        </tr>
-      </table>
-    </article>
+      <div class="table">
+        <table>
+          <tr>
+            <th>os: <br>
+              <p class="table-headings">
+                Windows 7 64-bit only
+                (No OSX support at this time)
+              </p>
+            </th>
+            <th><p class="table-headings">processor: </p><br>Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8GHZ
+            </th>
+          </tr>
+          <tr>
+            <th><p class="table-headings">Memory: </p><br>8 GB RAM
+            </th>
+            <th><p class="table-headings">storage: </p><br>8 GB available space</th>
+          </tr>
+          <tr>
+            <th><p class="table-headings">Graphics:</p> <br>8 GB available space</th>
+          </tr>
+        </table>  
+      </div>
+          </article>
     <article>
       <div class="order">
         <button>
