--- a/index.html
+++ b/index.html
@@ -136,14 +136,17 @@
         </table>  
       </div>
           </article>
-    <article>
+    <article class="site-testimonial">
+      <h1>What people think</h1>
+      <h2>Press quotes</h2>
+      <p>Our goal is to create a product and service that you’re satisfied with and use it every day. This is why we’re constantly working on our services to make it better every day and really listen to what our users has to say.</p>
       <div class="order">
         <button>
           <a href="#">Read more testemonial</a>
         </button>
       </div>
       <div>
-        <div>
+        <div class="container">
           <ul>
             <li>Evan Lahti</li>
             <li>PC Gamer</li>
@@ -151,7 +154,7 @@
           </ul>
           <p>October 18, 2018</p>
         </div>
-        <div>
+        <div class="container">
           <div>
             <ul>
               <li>Jada Griffin </li>
@@ -162,7 +165,7 @@
           </div>
         </div>
         <div>
-        </div>
+        <div class="container">
         <ul>
           <li>Aaron Williams</li>
           <li>Uproxx</li>
