--- a/index.html
+++ b/index.html
@@ -55,19 +55,20 @@
       <div>
         <h1 class="title-of-games">What is sos</h1>
         <h2 class="big-heading">social battle royale game</h2>
-      <p class="more-explanation">Each round, you and 15 other contestants compete to
-        escape a deadly island filled with monsters. The trick is: three people can survive. Will you run
-        solo or form friendships with others to escape?
+        <p class="more-explanation">Each round, you and 15 other contestants compete to
+          escape a deadly island filled with monsters. The trick is: three people can survive. Will you run
+          solo or form friendships with others to escape?
 
-        Making the right decisions could be the
-        difference between life and death.</p>
+          Making the right decisions could be the
+          difference between life and death.</p>
       </div>
       <div class="game-information">
         <ul class="slide-image">
           <li class="first-img">
             <a href="#"><img src="../game-landing-page/webroot/images/image-slide.svg" alt=""></a>
           </li>
-          <li class="scd-img"><a href="#"><img src="../game-landing-page/webroot/images/image-slide.svg" alt=""></a></li>
+          <li class="scd-img"><a href="#"><img src="../game-landing-page/webroot/images/image-slide.svg" alt=""></a>
+          </li>
           <li class="third-img">
             <a href="#"><img src="../game-landing-page/webroot/images/image-slide.svg" alt=""></a>
           </li>
@@ -122,24 +123,32 @@
                 (No OSX support at this time)
               </p>
             </th>
-            <th><p class="table-headings">processor: </p><br>Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8GHZ
+            <th>
+              <p class="table-headings">processor: </p><br>Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8GHZ
             </th>
           </tr>
           <tr>
-            <th><p class="table-headings">Memory: </p><br>8 GB RAM
+            <th>
+              <p class="table-headings">Memory: </p><br>8 GB RAM
             </th>
-            <th><p class="table-headings">storage: </p><br>8 GB available space</th>
+            <th>
+              <p class="table-headings">storage: </p><br>8 GB available space
+            </th>
           </tr>
           <tr>
-            <th><p class="table-headings">Graphics:</p> <br>8 GB available space</th>
+            <th>
+              <p class="table-headings">Graphics:</p> <br>8 GB available space
+            </th>
           </tr>
-        </table>  
+        </table>
       </div>
-          </article>
+    </article>
     <article class="site-testimonial">
       <h1>What people think</h1>
       <h2>Press quotes</h2>
-      <p>Our goal is to create a product and service that you’re satisfied with and use it every day. This is why we’re constantly working on our services to make it better every day and really listen to what our users has to say.</p>
+      <p>Our goal is to create a product and service that you’re satisfied with and use it every day. This is why we’re
+        constantly working on our services to make it better every day and really listen to what our users has to say.
+      </p>
       <div class="order">
         <button>
           <a href="#">Read more testemonial</a>
@@ -148,32 +157,32 @@
       <div>
         <div class="container">
           <ul>
-            <li>Evan Lahti</li>
-            <li>PC Gamer</li>
+            <li class="user-name">Evan Lahti</li>
+            <li class="user-job">PC Gamer</li>
             <p><q>One of my gaming highlights of the year.</p>
+            <li class="date">October 18, 2018</li>
           </ul>
-          <p>October 18, 2018</p>
         </div>
         <div class="container">
           <div>
             <ul>
-              <li>Jada Griffin </li>
-              <li>Nerdreactor</li>
+              <li class="user-name">Jada Griffin </li>
+              <li class="user-job">Nerdreactor</li>
               <p><q>The next big thing in the world of streaming and survival games.</p>
-            </ul>
-            <p>December 21, 2018</p>
+              <li class="date">December 21, 2018</li>
+              </ul>
           </div>
         </div>
         <div>
-        <div class="container">
-        <ul>
-          <li>Aaron Williams</li>
-          <li>Uproxx</li>
-          <p><q>Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.</p>
-        </ul>
-        <p>December 24, 2018</p>
-      </div>
-      </div>
+          <div class="container">
+            <ul>
+              <li class="user-name">Aaron Williams</li>
+              <li class="user-job">Uproxx</li>
+              <p><q>Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.</p>
+              <li class="date">December 24, 2018</li>
+              </ul>
+          </div>
+        </div>
     </article>
     <article>
       <h1>Want to stay in touch?</h1>
