added new list to the html and chnged the properties in masthead

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
           </defs>
         </svg>
       </a>
+      <div class="link-desktop">
+        <ul>
+          <li><a href="#">Main</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Game Feature</a></li>
+          <li><a href="#">System requirements</a></li>
+          <li><a href="#">Quotes</a></li>
+        </ul>
+      </div>
       <div class="about-the-page">
         <form action="." method="GET">
           <label for="lang_dropdown"></label>
@@ -39,7 +48,7 @@
         <h1 class="start-play">Survive at all costs</h1>
         <h2 class="start-play experience-new-game">Experience new social battle royale game</h2>
       </div>
-      <div class="order">
+      <div class="buying-btn">
         <button>
           <a href="#">Buy now on steam $14.99</a>
         </button>
