--- a/index.html
+++ b/index.html
@@ -52,57 +52,57 @@
             <a href="#">Buy now on steam $14.99</a>
           </button>
         </div>
-      <div class="choices">
-        <p>
-          The story
-        </p>
-      </div>
-      <div>
-        <a class="navigation" href="#"><svg width="135" height="12" viewBox="0 0 135 12" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M134.059 5.98751L129.358 2.42911V5.98751V9.23021L134.059 5.98751Z" fill="white" />
-            <path d="M92.4255 5.98751H129.358M129.358 2.42911L134.059 5.98751L129.358 9.23021V2.42911Z" stroke="white"
-              stroke-width="1.19824" stroke-linecap="round" stroke-linejoin="round" />
-            <path d="M92.4255 5.98751H129.358M129.358 2.42911L134.059 5.98751L129.358 9.23021V2.42911Z"
-              stroke="url(#paint0_linear)" stroke-width="1.19824" stroke-linecap="round" stroke-linejoin="round" />
-            <circle cx="74.7962" cy="5.82965" r="5.20026" stroke="white" stroke-width="0.97049" />
-            <circle cx="74.7962" cy="5.82965" r="5.20026" stroke="url(#paint1_linear)" stroke-width="0.97049" />
-            <circle cx="51.9666" cy="5.82965" r="5.20026" stroke="white" stroke-width="0.97049" />
-            <circle cx="51.9666" cy="5.82965" r="5.20026" stroke="url(#paint2_linear)" stroke-width="0.97049" />
-            <circle cx="29.137" cy="5.82965" r="5.20026" stroke="white" stroke-width="0.97049" />
-            <circle cx="29.137" cy="5.82965" r="5.20026" stroke="url(#paint3_linear)" stroke-width="0.97049" />
-            <circle cx="6.30768" cy="5.82965" r="5.20026" fill="white" />
-            <circle cx="6.30768" cy="5.82965" r="5.20026" stroke="white" stroke-width="0.97049" />
-            <circle cx="6.30768" cy="5.82965" r="5.20026" stroke="url(#paint4_linear)" stroke-width="0.97049" />
-            <defs>
-              <linearGradient id="paint0_linear" x1="113.242" y1="2.42911" x2="113.242" y2="9.23021"
-                gradientUnits="userSpaceOnUse">
-                <stop stop-color="white" />
-                <stop offset="1" stop-color="white" stop-opacity="0" />
-              </linearGradient>
-              <linearGradient id="paint1_linear" x1="74.7962" y1="0.629395" x2="74.7962" y2="11.0299"
-                gradientUnits="userSpaceOnUse">
-                <stop stop-color="white" />
-                <stop offset="1" stop-color="white" stop-opacity="0" />
-              </linearGradient>
-              <linearGradient id="paint2_linear" x1="51.9666" y1="0.629395" x2="51.9666" y2="11.0299"
-                gradientUnits="userSpaceOnUse">
-                <stop stop-color="white" />
-                <stop offset="1" stop-color="white" stop-opacity="0" />
-              </linearGradient>
-              <linearGradient id="paint3_linear" x1="29.137" y1="0.629395" x2="29.137" y2="11.0299"
-                gradientUnits="userSpaceOnUse">
-                <stop stop-color="white" />
-                <stop offset="1" stop-color="white" stop-opacity="0" />
-              </linearGradient>
-              <linearGradient id="paint4_linear" x1="6.30768" y1="0.629395" x2="6.30768" y2="11.0299"
-                gradientUnits="userSpaceOnUse">
-                <stop stop-color="white" />
-                <stop offset="1" stop-color="white" stop-opacity="0" />
-              </linearGradient>
-            </defs>
-          </svg></a>
-      </div>
+        <div class="choices">
+          <p>
+            The story
+          </p>
+        </div>
+        <div>
+          <a class="navigation" href="#"><svg width="135" height="12" viewBox="0 0 135 12" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path d="M134.059 5.98751L129.358 2.42911V5.98751V9.23021L134.059 5.98751Z" fill="white" />
+              <path d="M92.4255 5.98751H129.358M129.358 2.42911L134.059 5.98751L129.358 9.23021V2.42911Z" stroke="white"
+                stroke-width="1.19824" stroke-linecap="round" stroke-linejoin="round" />
+              <path d="M92.4255 5.98751H129.358M129.358 2.42911L134.059 5.98751L129.358 9.23021V2.42911Z"
+                stroke="url(#paint0_linear)" stroke-width="1.19824" stroke-linecap="round" stroke-linejoin="round" />
+              <circle cx="74.7962" cy="5.82965" r="5.20026" stroke="white" stroke-width="0.97049" />
+              <circle cx="74.7962" cy="5.82965" r="5.20026" stroke="url(#paint1_linear)" stroke-width="0.97049" />
+              <circle cx="51.9666" cy="5.82965" r="5.20026" stroke="white" stroke-width="0.97049" />
+              <circle cx="51.9666" cy="5.82965" r="5.20026" stroke="url(#paint2_linear)" stroke-width="0.97049" />
+              <circle cx="29.137" cy="5.82965" r="5.20026" stroke="white" stroke-width="0.97049" />
+              <circle cx="29.137" cy="5.82965" r="5.20026" stroke="url(#paint3_linear)" stroke-width="0.97049" />
+              <circle cx="6.30768" cy="5.82965" r="5.20026" fill="white" />
+              <circle cx="6.30768" cy="5.82965" r="5.20026" stroke="white" stroke-width="0.97049" />
+              <circle cx="6.30768" cy="5.82965" r="5.20026" stroke="url(#paint4_linear)" stroke-width="0.97049" />
+              <defs>
+                <linearGradient id="paint0_linear" x1="113.242" y1="2.42911" x2="113.242" y2="9.23021"
+                  gradientUnits="userSpaceOnUse">
+                  <stop stop-color="white" />
+                  <stop offset="1" stop-color="white" stop-opacity="0" />
+                </linearGradient>
+                <linearGradient id="paint1_linear" x1="74.7962" y1="0.629395" x2="74.7962" y2="11.0299"
+                  gradientUnits="userSpaceOnUse">
+                  <stop stop-color="white" />
+                  <stop offset="1" stop-color="white" stop-opacity="0" />
+                </linearGradient>
+                <linearGradient id="paint2_linear" x1="51.9666" y1="0.629395" x2="51.9666" y2="11.0299"
+                  gradientUnits="userSpaceOnUse">
+                  <stop stop-color="white" />
+                  <stop offset="1" stop-color="white" stop-opacity="0" />
+                </linearGradient>
+                <linearGradient id="paint3_linear" x1="29.137" y1="0.629395" x2="29.137" y2="11.0299"
+                  gradientUnits="userSpaceOnUse">
+                  <stop stop-color="white" />
+                  <stop offset="1" stop-color="white" stop-opacity="0" />
+                </linearGradient>
+                <linearGradient id="paint4_linear" x1="6.30768" y1="0.629395" x2="6.30768" y2="11.0299"
+                  gradientUnits="userSpaceOnUse">
+                  <stop stop-color="white" />
+                  <stop offset="1" stop-color="white" stop-opacity="0" />
+                </linearGradient>
+              </defs>
+            </svg></a>
+        </div>
   </header>
   <main>
     <article>
@@ -118,13 +118,11 @@
       </div>
       <div class="game-information">
         <ul class="slide-image">
-          <li class="first-img">
-            <a href="#"><img src="../game-landing-page/webroot/images/image-slide.svg" alt=""></a>
+          <li class="image"><img src="./webroot/images/first-image-slider-1-1.png" alt="">
           </li>
-          <li class="scd-img"><a href="#"><img src="../game-landing-page/webroot/images/image-slide.svg" alt=""></a>
+          <li class="image"><img src="./webroot/images/second-image-slider-2-2.png" alt="">
           </li>
-          <li class="third-img">
-            <a href="#"><img src="../game-landing-page/webroot/images/image-slide.svg" alt=""></a>
+          <li class="image"><img src="./webroot/images/image-slider-modified-3.png" alt="">
           </li>
         </ul>
       </div>
@@ -170,26 +168,26 @@
       </header>
       <div>
         <dl class="table">
-          <div>
+          <div class="row">
             <dt>Os:</dt>
             <dd>Windows 7 64-bit only(No OSX support at this time)</dd>
-          </div>    
-          <div>
+          </div>
+          <div class="row">
             <dt>Proffesor:</dt>
             <dd>Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8GHZ</dd>
           </div>
-          <div>
+          <div class="row">
             <dt>Memory:</dt>
             <dd> 8 GB RAM</dd>
           </div>
-          <div>
+          <div class="row">
             <dt>storage:</dt>
             <dd>8 GB available space</dd>
           </div>
-          <div>
+          <div class="row">
             <dt>Graphics: </dt>
-              <dd>8 GB available space</dd>
-          </div>    
+            <dd>8 GB available space</dd>
+          </div>
         </dl>
       </div>
     </article>
@@ -210,6 +208,7 @@
       <div>
         <div class="container ">
           <ul class="first-user">
+            <li><img src="./webroot/images/first-user-1.svg" alt=""></li>
             <li class="user-name">Evan Lahti</li>
             <li class="user-job">PC Gamer</li>
             <p class="users-quote"><q>One of my gaming highlights of the year.</p>
@@ -218,6 +217,7 @@
         </div>
         <div class="container">
           <ul class="scd-user">
+            <li><img src="./webroot/images/second-user.svg" alt=""></li>
             <li class="user-name">Jada Griffin </li>
             <li class="user-job">Nerdreactor</li>
             <p class="users-quote"><q>The next big thing in the world of streaming and survival games.</p>
@@ -226,6 +226,7 @@
         </div>
         <div>
           <div class="container">
+            <li><img src="./webroot/images/third-user.svg" alt=""></li>
             <ul class="third-user">
               <li class="user-name">Aaron Williams</li>
               <li class="user-job">Uproxx</li>
@@ -251,8 +252,8 @@
           taken care of by us. We will send you emails containing information about game. We don’t spam.</p>
       </aside>
       <div>
-        <p>Your email address</p>
         <input type="email" name="email" id="email">
+        <p>Your email address</p>
         <p>aliciliniavopir@gmail.com</p>
       </div>
       <div class="order">
